Refactored naming and removing out parameters

--- a/AnodyneSharp/AnodyneSharp.Multiplatform/AnodyneSharp.Multiplatform.csproj
+++ b/AnodyneSharp/AnodyneSharp.Multiplatform/AnodyneSharp.Multiplatform.csproj
@@ -102,6 +102,9 @@
       <Link>MonoGame.Framework.dll.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="app.manifest" />
   </ItemGroup>
   <Import Project="..\AnodyneSharp.Shared\AnodyneSharp.Shared.projitems" Label="Shared" />
