--- a/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
+++ b/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
