--- a/.gitignore
+++ b/.gitignore
@@ -432,3 +432,4 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/csharp,visualstudio
+/AnodyneSharp/AnodyneSharp.Shared/Content/Intra.dam.bak
