--- a/AnodyneSharp/AnodyneSharp.Multiplatform/AnodyneSharp.Multiplatform.csproj
+++ b/AnodyneSharp/AnodyneSharp.Multiplatform/AnodyneSharp.Multiplatform.csproj
@@ -26,6 +26,9 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="NVorbis" Version="0.10.1">
+      <Aliases>MyVorbis</Aliases>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Fluent-State-Machine\Fluent-State-Machine.csproj" />
