--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/HOTEL/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/HOTEL/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"hotel","Darkness":"hotel_overlay","DarknessAlpha":1},"Events":[],"Areas":[{"X":0,"Y":0,"Width":960,"Height":160,"Settings":{"FG_Blend":"hotel_roof_fg_hardlight","Music":"hotel_alt"}}]}
+{"Settings":{"Music":"hotel","Darkness":"hotel_overlay"},"Events":[],"Areas":[{"X":0,"Y":0,"Width":960,"Height":160,"Settings":{"FG_Blend":"hotel_roof_fg_hardlight","Music":"hotel_alt"}}]}
