--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/NEXUS/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/NEXUS/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"nexus","Darkness":"nexus_overlay","DarknessAlpha":1},"Events":[],"Areas":[]}
+{"Settings":{"Music":"nexus","Darkness":"nexus_overlay"},"Events":[],"Areas":[]}
