Moved DarknessChange and MusicEvent into map data

--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/CIRCUS/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/CIRCUS/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"circus"},"Events":[],"Areas":[]}
+{"Settings":{"Music":"circus"},"Events":[],"Areas":[{"X":1280,"Y":160,"Width":160,"Height":160,"Settings":{"DarknessAlpha":0.800000}}]}
