--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/DRAWER/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/DRAWER/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"drawer"},"Events":[],"Areas":[]}
+{"Settings":{"Music":"drawer","DarknessAlpha":1.000000},"Events":[],"Areas":[{"X":160,"Y":480,"Width":80,"Height":320,"Settings":{"DarknessAlpha":1.000000}},{"X":480,"Y":-1.,"Width":480,"Height":480,"Settings":{"DarknessAlpha":1.000000}},{"X":320,"Y":160,"Width":160,"Height":320,"Settings":{"DarknessAlpha":0.000000}}]}
