--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/TERMINAL/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/TERMINAL/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"terminal","Darkness":"terminal_overlay"},"Events":[],"Areas":[]}
+{"Settings":{"Music":"terminal","Darkness":"terminal_overlay"},"Events":[{"Settings":{"Music":"terminal_alt"},"Event":"SageDied"}],"Areas":[]}
