--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/WINDMILL/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/WINDMILL/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"windmill","Darkness":"windmill_overlay"},"Events":[],"Areas":[]}
+{"Settings":{"Music":"windmill","Darkness":"windmill_overlay"},"Events":[{"Settings":{"Music":"windmill_alt"},"Event":"WindmillOpened"}],"Areas":[]}
