Fixes for big key gate and windmill song selection

--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/WINDMILL/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/WINDMILL/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"windmill","Darkness":"windmill_overlay","Ambience":"windmill"},"Events":[{"Settings":{"Music":"windmill_alt"},"Event":"WindmillOpened"}],"Areas":[]}
+{"Settings":{"Music":"","Darkness":"windmill_overlay","Ambience":"windmill"},"Events":[{"Settings":{"Music":"windmill"},"Event":"WindmillOpened"}],"Areas":[]}
