Fix most of re-added secret

--- a/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/REDCAVE/Settings.json
+++ b/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/REDCAVE/Settings.json
@@ -1,1 +1,1 @@
-{"Settings":{"Music":"redcave","Darkness":"redcave_overlay"},"Events":[],"Areas":[]}
+{"Settings":{"Music":"redcave","Darkness":"redcave_overlay"},"Events":[],"Areas":[{"X":160,"Y":1120,"Width":480,"Height":480,"Settings":{"Music":"sacrificial","BOI":true}}]}
