Added two simple entities in DEBUG

--- a/.gitignore
+++ b/.gitignore
@@ -437,3 +437,4 @@ __pycache__/
 *.dam.bak
 /gifs
 !/AnodyneSharp/AnodyneSharp.Shared/Content/Maps/**
+!/AnodyneSharp/AnodyneSharp.Shared/Entities/**
