Small fixes for boss rush
- Changed some health drops into 1 health ones
- Made it possible to pick up keys with broom
- Added mitra sprite to main menu when finishing boss rush
- Fixed final boss platform size

--- a/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
+++ b/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
@@ -10,6 +10,9 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
     <AssemblyName>AnodyneSharp</AssemblyName>
     <RootNamespace>AnodyneSharp</RootNamespace>
+    <Version>1.2.0</Version>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
+    <FileVersion>1.2.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
