--- a/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
+++ b/AnodyneSharp/AnodyneSharp.Windows/AnodyneSharp.Windows.csproj
@@ -29,6 +29,7 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Archipelago.MultiClient.Net" Version="5.0.6" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="NVorbis" Version="0.10.4">
